# avro-editor

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  index.html
src/: lib.rs  main.rs
src/data/: avro_io.rs  mod.rs  platform.rs  types.rs
src/schema/: deep_nested_all_types.avsc  mod.rs  parser.rs  sample_schema.avsc  schema_info.rs  trade_event.avsc
src/state/: app_state.rs
src/ui/: mod.rs  record_editor.rs  record_preview.rs  schema_explorer.rs
