[package]
name = "avro_editor"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lib]
name = "avro_editor_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "avro_editor"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
env_logger = "0.11"
egui = "0.31"
log = "0.4.27"
apache-avro = "0.21"
serde_json = "1.0"
chrono = "0.4.45"
rand = { version = "0.10.2", features = ["std"] }
rfd = "0.15"
uuid = { version = "1.8.0", features = ["v4", "rng-getrandom"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
getrandom = { version = "0.4", features = ["wasm_js"] }
